--- a/irenecho-lab1/index.html
+++ b/irenecho-lab1/index.html
@@ -4,15 +4,11 @@
     <meta name="author" content="Irene Chou">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Irene Chou professional website">
-    <title>Irene Chou</title>    
-    <link rel="stylesheet" href="static/style.css"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
+    <title>Irene Chou</title>         
 </head>
-<body>
-    <header>
-        <h1 id="webname"> Irene Chou </h1>
+<body style="font-family: Arial">
+    <header style="color:blue; background:lightblue">
+        <h1> Irene Chou </h1>
         <nav>
             <a href="index.html">Home</a> 
             <a href="views/cv.html">CV</a>
