--- a/irenecho-lab2/index.html
+++ b/irenecho-lab2/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script defer src="./static/script.js"></script>
     <meta name="author" content="Irene Chou">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Irene Chou professional website">
@@ -23,7 +22,7 @@
     </header>
 
     <div class="main">
-            <h2 id="greeting">Hi, my name is Irene</h2>
+            <h2>Hi, my name is Irene</h2>
             <img src="static/profile.png" alt="Profile Picture" width="150">
             <p id="intro">  Hi, I'm Irene, a passionate Information Systems student at Carnegie Mellon University. I enjoy designing web interfaces and exploring new technologies. Welcome to my professional website!
             </p>
