--- a/irenecho-lab3/index.html
+++ b/irenecho-lab3/index.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body onLoad="addYear()">
+<body>
     <header>
         <h1 id="webname"> Irene Chou </h1>
         <nav>
@@ -26,16 +25,12 @@
     <div class="main">
             <h2 id="greeting">Hi, my name is Irene</h2>
             <img src="static/profile.png" alt="Profile Picture" width="150">
-            <div id="bio">
-                <p> Hi, I'm Irene, a passionate Information Systems student at Carnegie Mellon University. </p>
-                <p><span id="extraBio" style="display: none;">I enjoy designing web interfaces and exploring new technologies. Welcome to my professional website!</span> </p>
-                <button id="toggleBio">Read More</button>
-            </div>
-            
-        </div>
+            <p id="intro">  Hi, I'm Irene, a passionate Information Systems student at Carnegie Mellon University. I enjoy designing web interfaces and exploring new technologies. Welcome to my professional website!
+            </p>
+    </div>
    
     <footer>
-        <p>designed &amp; coded by Irene Chou &copy;<span id="copyYear"></span></p>
+        <p>&copy; 2025 designed &amp; coded by Irene Chou</p>
     </footer>
 </body>
 </html>
